# mwareeth

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration.local  Makefile  README.md  babel.cfg  main.py  pyproject.toml  ruff.toml  setup.py
examples/: build_tree.py  gettext_example.py  gui_example.py  visualize_example.py
locales/ar/LC_MESSAGES/: mwareeth.po
locales/en/LC_MESSAGES/: mwareeth.po
mwareeth/: family_tree_builder.py  heir_builder.py  i18n.py  visualizers.py
mwareeth/entities/: __init__.py  family_tree.py  heir.py  madhhab.py  person.py  relationship.py
mwareeth/entities/tests/: __init__.py  test_family_tree.py  test_person.py
mwareeth/gui/: __init__.py  app.py  family_tree_view.py  forms.py
mwareeth/gui/assets/: ltr.tcl  rtl.tcl
mwareeth/tests/: test_heir_builder.py  test_heir_state_machine.py
mwareeth/utils/: events.py  itertools.py
scripts/: check_gui_dependencies.py  generate_icons.py  run_gui.sh
src/: family_tree.py  family_tree_builder.py  person.py
src/entities/: family_tree.py
src/tests/: __init__.py  test_family_tree.py  test_person.py
