[project]
name = "mwareeth"
version = "0.0.0"
description = "KBS system to divide estate according to Islamic law."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "babel>=2.17.0",
    "graphviz>=0.21",
    "pytest>=8.4.1",
    "setuptools>=80.9.0",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
